--- a/pppppp/View/AuthView/EmailSignInView.storyboard
+++ b/pppppp/View/AuthView/EmailSignInView.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Login View Controller-->
+        <!--Email Sign In View Controller-->
         <scene sceneID="Cs1-2l-PNh">
             <objects>
-                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="j38-ue-eF5" customClass="LoginViewController" customModule="pppppp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="j38-ue-eF5" customClass="EmailSignInViewController" customModule="pppppp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Wev-PF-J9D">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
