--- a/pppppp/View/AuthView/EmailSignUpView.storyboard
+++ b/pppppp/View/AuthView/EmailSignUpView.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Create Account View Controller-->
+        <!--Email Sign Up View Controller-->
         <scene sceneID="lCb-JW-9Hw">
             <objects>
-                <viewController storyboardIdentifier="CreateAccountViewController" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Byd-zG-khn" customClass="CreateAccountViewController" customModule="pppppp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EmailSignUpViewController" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Byd-zG-khn" customClass="EmailSignUpViewController" customModule="pppppp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bCB-Oc-piP">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
